erDiagram
    ROLES ||--|{ USERS : per
    MOVIES ||--|{ SHOWTIMES : areProyectedOn
    SHOWTIMES }|--|| ROOMS : areProyectedIn
    CINEMAS ||--|{ ROOMS : Contains
    ROOMS ||--|{ SEATS : Has
    USERS ||--|{ TRANSACTIONS : Purchases
    TRANSACTIONS ||--|{ TRANSACTIONSSEATS : Contains
    TRANSACTIONSSEATS }|--|| SEATS : Contains
    TRANSACTIONS }|--|| SHOWTIMES : Has
    ROLES {
        int Role_Id PK
        nvarchar(50) RoleName
    }
    USERS {
        int User_Id PK
        nvarchar(50) Username "UQ-NN"
        nvarchar(150) Email "UQ-NN"
        varchar(256) PasswordHash "NN"
        nvarchar(255) FullName
        int Role_Id FK
        datetime2 CreatedAt
    }
    CINEMAS {
        int Cinema_Id PK
        nvarchar(100) CinemaName "UQ-NN"
        nvarchar(1000) Address
        smallint City
    }
    ROOMS {
        int Room_Id PK
        int Cinema_Id FK
        nvarchar(100) RoomName "NN"
        tinyint Capacity
    }
    MOVIES {
        int Movie_Id PK
        nvarchar(255) Title "NN"
        tinyint Genre
        smallint DurationMinutes
        tinyint Rating
        nvarchar(1000) Synopsis "NN"
        nvarchar(1000) PosterUrl
    }
    SHOWTIMES {
        int Showtime_Id PK
        int Movie_Id FK
        int RoomId FK
        date ShowDate "NN"
        time StartTime "NN"
        time EndTime "NN"
        decimal Price
    }
    SEATS {
        int Seat_Id PK
        int Room_Id FK
        char(1) Row
        tinyint Number
    }
    TRANSACTIONS {
        int Transaction_Id PK
        int User_Id FK
        int Showtime_Id FK
        datetime2 PurchaseDate "NN"
        decimal TotalAmount
        tinyint Status
        rowversion RowVersion
    }
    TRANSACTIONSSEATS {
        int TransactionSeat_Id PK
        int Transaction_Id FK
        int Seat_Id FK
        rowversion RowVersion
    }